--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Random Password Generator</title>
+  <title>Password Random Password Generator - Coding Imagination</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <P class="channel-name">Coding Imagination</P>
+  <div class = "container">
+    <h1> Generate A <br> <span> Random Password </span> </h1>
+    <div class = "display">
+        <input type = 'text' id="password" placeholder="Password">
+        <img src="img/copy icon 1.png" alt="COPY">
+    </div>
+    <button> <img src="img/generate icon.png" alt="">Generate Password</button>
+  </div>
+
+
+  <script src="script.js"></script>
 </body>
 </html>
